# seed_c_sdl2

./: .gitignore  CMakeLists.txt  Makefile  MyMakefile  README.md  run.bat  run_test.bat
src/: main.c
src/core/services/string/: string_commun_service.c  string_commun_service.h
src/game/factories/fonts/: font_factory.c  font_factory.h
src/game/factories/sprites/: sprites_factory.c  sprites_factory.h
src/game/factories/texts/: text_factory.c  text_factory.h
src/game/factories/window/: window_factory.c  window_factory.h  window_group_factory.c  window_group_factory.h
src/game/models/global_game_data/: global_game_data.h
src/game/models/sprites/: sprite.c  sprite.h
src/game/models/texts/: text.c  text.h
src/game/models/window_group/: window_group.h
src/game/services/: draw_version_sdl.c  draw_version_sdl.h
src/game/services/error/: exit_with_error_message.c  exit_with_error_message.h
src/game/services/global_game_data/: global_game_data_service.c  global_game_data_service.h
src/game/services/sdl_init/: sdl_init.c  sdl_init.h
src/game/services/sprites/: draw_sprite_service.c  draw_sprite_service.h
src/game/services/texts/: draw_text_service.c  draw_text_service.h  fps_text_service.c  fps_text_service.h
src/models/: position.h
test/: test_main.c
test/core/services/string/: string_commun_service_spec.c  string_commun_service_spec.h
